# CodeCompetitions

./: README.md
Codeforces/Contest2050/Ghignoli/: main_A_OK.cpp  main_B_OK.cpp  main_C_OK.cpp
Codeforces/Ghignoli/Problemset/: main_1256A_PaymentWithoutChange.cpp  main_160A_Twins.cpp  main_236A_BoyOrGirl.cpp  main_282A_Bit++.cpp  main_4A_Watermelon.cpp  main_71A_WayTooLongWords.cpp  main_96A_Football.cpp
Codeforces/Ghignoli/Round 715/: main_A.cpp  main_B.cpp  main_C_KO_bak.cpp  main_D_WA.cpp
Codeforces/Ghignoli/Round 716/: main_B_working.cpp
Codeforces/Problemset/Ghignoli/: main_677A_VanyaAndFence.cpp
Codeforces/Round 716/Ghignoli/: main_A.cpp
HashCode/: Build&Pray - Partecipazione e risultati
HashCode/2019/: HashCode2019.py
HashCode/2020/HC2020Final/: CMakeLists.txt  main.cpp  main_template.cpp
HashCode/2021/HashCode2021/: main  main copy.cpp  main2  main2.cpp  main3  main3.c
HashCode/HashCode_PizzaCutter/: PizzaCutter.py
LeetCode/WeeklyContest328/: main_2.cpp  main_2_75.cpp  main_2_WA.cpp  main_2_res75.cpp  main_3.cpp
ReplyChallenge/: Build&Pray - Partecipazione e risultati
ReplyChallenge/2018/: first_adventure.in  second_adventure.in  third_adventure.in
ReplyChallenge/2019/Winners/2. [N] 70535157/reply/: CMakeLists.txt  archive.sh  drochilovo.cpp  flow_opt.cpp  greedy.cpp  make.sh  run.py  score.cpp
ReplyChallenge/2019/Winners/2. [N] 70535157/reply/outputs2/: b_dream.ans  c_soup.ans  d_maelstrom.ans  e_igloos.ans  f_glitch.ans  score_b_dream.txt  score_d_maelstrom.txt  score_e_igloos.txt  score_f_glitch.txt
(+135 files in other folders)
